# NebulaDB

./: .gitignore  Cargo.toml  LICENSE  README.md  fix_warnings.sh
apps/server/: Cargo.toml
apps/server/src/: main.rs
crates/: file.rs
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  lib.rs  repl.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: block.rs  collection.rs  compression.rs  file.rs  lib.rs  manager.rs  storage.rs  wal_integration.rs
crates/wal/: Cargo.toml
crates/wal/src/: config.rs  entry.rs  error.rs  lib.rs  log.rs  manager.rs
docs/: CONTIRBUTION.md  DEVELOPER_HELP.md  ROADMAP.md
proto/: nebula.proto
src/: cli.rs  config.rs  connection_pool.rs  database.rs  main.rs  managers.rs  storage.rs  util.rs
src/interfaces/: cli.rs  grpc.rs  http.rs  mod.rs
tests/: fix_missing_doc.rs
