# Cargo.toml (in root)
[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/index",
    "crates/query",
    "crates/wal",
    "crates/graph",
    "crates/archive",
#    "crates/cli",
]
resolver = "2"

[package]
name = "nebuladb"
version = "0.1.0"
edition = "2021"

[dependencies]
nebuladb-core = { path = "crates/core" }
nebuladb-storage = { path = "crates/storage" }
nebuladb-index = { path = "crates/index" }
nebuladb-query = { path = "crates/query" }
nebuladb-wal = { path = "crates/wal" }
nebuladb-graph = { path = "crates/graph" }
nebuladb-archive = { path = "crates/archive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "10.0.0"
dirs = "4.0.0"
