[package]
name = "nebuladb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
nebuladb-core = { path = "../core" }
nebuladb-storage = { path = "../storage" }
nebuladb-wal = { path = "../wal" }
clap = { version = "3.0", features = ["derive"] }
rustyline = "9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
